<resources>
    <string name="app_name">KotlinStart</string>
    <string name="first_button">FirstButton</string>
    <string name="second_button">SecondButton</string>
    <string name="third_button">ThirdButton</string>
    <string name="fourth_button">FourthButton</string>
    <string name="black">black</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="weather">Weather</string>
    <string name="client_provider">client provider</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>